--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 	<head>
-		<title>逗比云监控</title>
+		<title>笨猫云监控</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,14 +21,14 @@
 			<div class="navbar-inner">
 				<div class="container">
 					<div class="navbar-header">
-						<a href="#" class="navbar-brand">逗比云监控</a>
+						<a href="#" class="navbar-brand">笨猫云监控</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		
 		<div class="container announcement">
-		<p>逗比云监控演示 / 自建<a target="_blank" href="https://doub.io/sszhfx/">免费SS节点</a> 监控站 —— <a target="_blank" href="https://doub.io">逗比根据地</a></p>
+		<p>云监控演示 / 自建<a target="_blank" href="https://www.nbmao.com/">免费SS节点</a> 监控站 —— <a target="_blank" href="https://www.nbmao.com">笨猫</a></p>
 		</div>
 		
 		<div class="container content">
